<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="50dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:paddingBottom="10dp"
        android:contentDescription="@string/image_content_description"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/nuimwifi_logo_2" />

    <TextView
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_student_number" />

    <EditText
        android:hint="@string/student_number_hint"
        android:inputType="text"
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_password" />

	<EditText
	    android:id="@+id/editText2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword" />

	<Button
	    android:id="@+id/button1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:text="@string/save_button_text" />
    
</LinearLayout>